[package]
name = "lab3_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
strum = "0.24.0"
strum_macros = "0.24.0"
read_input = "0.8.6"
