[package]
name = "lab3_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.79"
bincode = "1.3.3"
native-tls = "0.2.10"
strum = "0.24.0"
strum_macros = "0.24.0"
rustbreak = { version = "2", features = ["ron_enc"] }
simplelog = "0.12.0"
rust-argon2 = "1.0"
